<resources>
    <string name="app_name">UHealth</string>
    <string name="medicine_name">add medicine name</string>
    <string name="appointment_location">add appointment location</string>
    <string name="select_time">Select time</string>
    <string name="physcian_name">add physcian name</string>
    <string name="add_appointment">Add an appointment!</string>
    <string name="interval">frequency of the medication(measured by hours)</string>
    <string name="storage">available storage for your first repeat</string>
    <string name="add_medication">Add a medication plan</string>
    <string name="select_appointment_type">Select appointment type</string>
    <string name="office_appointment">office appointment</string>
    <string name="fsv_explain_title"><b>Requesting Information</b></string>
    <string name="fsv_explain_content">You may request a snapshot of personal information from another user, permission must be granted from the requested and they will choose which information they would like to share with you.
        Including: \n\n
        \u2022 Personal Information and Medical History \n
        \u2022 Diagnosis Histroy \n
        \u2022 Timeline \n
    </string>
    <string name="fsv_request_title"><b>Enter requested user\'s E-mail</b></string>
</resources>