<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MedicationAdder"
    tools:showIn="@layout/activity_medication_adder">

    <EditText
        android:id="@+id/medicine_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/medicine_name"
        android:inputType="text"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/medication_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/interval"
        android:layout_below ="@+id/medicine_name"
        android:inputType="number"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/medication_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/storage"
        android:layout_below ="@+id/medication_interval"
        android:inputType="number"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnAddMedication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:text="@string/add_medication"
        />

</RelativeLayout>