<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ShareRequest_Frag">

    <RelativeLayout
        android:id="@+id/fsv_request_requestsection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/fsv_request_viewframesection"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="top">

        <androidx.cardview.widget.CardView
            android:id="@+id/fsv_explain_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            android:layout_margin="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fsv_explain_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/orangeLight"
                    android:text="@string/fsv_explain_title"/>

                <TextView
                    android:id="@+id/fsv_explain_content"
                    android:layout_below="@id/fsv_explain_title"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_border"
                    android:text="@string/fsv_explain_content"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fsv_enter_section"
            app:cardElevation="0dp"
            android:layout_below="@id/fsv_explain_section"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fsv_enter_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/orangeLight"
                    android:text="@string/fsv_request_title"/>

                <EditText
                    android:id="@+id/fsv_enter_ET"
                    android:layout_below="@id/fsv_enter_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/textview_border"
                    android:hint="Enter Email"
                    android:text=""/>

            </RelativeLayout>



        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/fsv_enter_bt"
            android:layout_below="@id/fsv_enter_section"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Make Request" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fsv_request_viewframesection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="View Requests"
            android:textSize="20sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fsv_request_requestframesection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/requestframe_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="Make Requests"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/requestframe_text"
                android:background="@color/black" />


        </RelativeLayout>



    </FrameLayout>

    <RelativeLayout
        android:id="@+id/fsv_request_viewsection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fsv_request_requestframesection">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fsv_request_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>